Update .gitignore to include system and Python files
Added system and Python-related files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
+## SYSTEM
+# macOS system files
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon files
+Icon?
+._*
+
+# Thumbnails
+.Spotlight-V100
+.Trashes
+
+# Windows system files
+Thumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux temporary files
+*~
+.nfs
+
+## PYTHON
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
