--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,13 +30,6 @@ classifiers = [
     "Typing :: Typed",
 ]
 
-[project.urls]
-Homepage = "https://github.com/pyfect/pyfect"
-Documentation = "https://pyfect.readthedocs.io"
-Repository = "https://github.com/pyfect/pyfect"
-Issues = "https://github.com/pyfect/pyfect/issues"
-Changelog = "https://github.com/pyfect/pyfect/releases"
-
 dependencies = [
     # Core dependencies will be added as we implement features
     # Starting with minimal dependencies
@@ -44,18 +37,25 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    "ruff",
-    "pytest",
-    "pytest-cov",
-    "pytest-asyncio",
-    "pre-commit",
-    "mypy",
+    "ruff>=0.15.0,<1",
+    "pytest>=9.0.2,<10",
+    "pytest-cov>=7.0.0,<8",
+    "pytest-asyncio>=1.3.0,<2",
+    "pre-commit>=4.5.1,<5",
+    "mypy>=1.19.1,<2",
 ]
 docs = [
-    "mkdocs",
-    "mkdocs-material",
-    "mkdocstrings[python]",
+    "mkdocs>=1.6.1,<2",
+    "mkdocs-material>=9.7.1,<10",
+    "mkdocstrings[python]>=1.0.3,<2",
 ]
+
+[project.urls]
+Homepage = "https://github.com/pyfect/pyfect"
+Documentation = "https://pyfect.readthedocs.io"
+Repository = "https://github.com/pyfect/pyfect"
+Issues = "https://github.com/pyfect/pyfect/issues"
+Changelog = "https://github.com/pyfect/pyfect/releases"
 
 # Ruff configuration
 [tool.ruff]
