--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,13 +32,12 @@ jobs:
 
       - name: Run tests with coverage
         run: |
-          pytest --cov=pyfect --cov-report=term-missing --cov-report=xml
+          pytest --cov --cov-branch --cov-report=xml
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
         if: matrix.python-version == '3.13'
         with:
-          file: ./coverage.xml
           fail_ci_if_error: false
 
   type-check:
