docs: add logo and favicon. closes #12

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -8,6 +8,8 @@ repo_url: https://github.com/pyfect/pyfect
 
 theme:
   name: material
+  logo: assets/logo.svg
+  favicon: assets/favicon.svg
   palette:
     - scheme: default
       primary: indigo
