--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -78,3 +78,9 @@ jobs:
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+
+      - name: Trigger ReadTheDocs rebuild for latest
+        run: |
+          curl -X POST \
+            -H "Authorization: Token ${{ secrets.RTD_TOKEN }}" \
+            https://readthedocs.org/api/v3/projects/pyfect/versions/latest/builds/
