Triggered both stable and latest docs on release

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -79,8 +79,11 @@ jobs:
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
 
-      - name: Trigger ReadTheDocs rebuild for latest
+      - name: Trigger ReadTheDocs rebuild for latest and stable
         run: |
           curl -X POST \
             -H "Authorization: Token ${{ secrets.RTD_TOKEN }}" \
             https://readthedocs.org/api/v3/projects/pyfect/versions/latest/builds/
+          curl -X POST \
+            -H "Authorization: Token ${{ secrets.RTD_TOKEN }}" \
+            https://readthedocs.org/api/v3/projects/pyfect/versions/stable/builds/
